' @autogenerated
@startuml
left to right direction
title Clases para user accepted termns of use
class access.User{
uid:string
name:string
password:string
email:string
enabled:boolean
approved:boolean
rejected:boolean
temporalPassword:boolean
useSecondFactors:boolean
secondFactorSeed:string
blockedUntil:datetime
language:string
provider:string
version:integer
list()
retrieve()
create()
update()
delete()
registerAccepted()
registerPending()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
}
class access.TenantTermsOfUse{
uid:string
text:blob
attached:binary
activationDate:datetime
version:integer
list()
retrieve()
create()
update()
delete()
}
class access.UserAcceptedTermnsOfUse{
uid:string
acceptDate:datetime
version:integer
list()
retrieve()
create()
update()
delete()
}
access.User "1"  o--  "N*" access.UserAcceptedTermnsOfUse: user
access.TenantTermsOfUse "1"  o--  "N*" access.UserAcceptedTermnsOfUse: conditions

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
